Initial Standard Time Widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Metric Time</string>
+    <string name="widget_name">Metric Time Widget</string>
 </resources>
