Changed main activity to read Welcome instead of Hello World

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
 <resources>
     <string name="app_name">Metric Time</string>
     <string name="widget_name">Metric Time Widget</string>
+    <string name="welcome_text">Welcome to the Metric Time Widget App</string>
 </resources>
