--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,9 @@
     <string name="app_name">Metric Time</string>
     <string name="widget_name">Metric Time Widget</string>
     <string name="welcome_text">Welcome to the Metric Time Widget App</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="settings">Settings</string>
+
+    <string name="pref_title_show_notification">Show Notification</string>
+    <string name="pref_summary_show_notification">Show persistent notification with the current metric time.</string>
 </resources>
